--- a/files/accuracy.ini
+++ b/files/accuracy.ini
@@ -17,7 +17,7 @@ eachmasked = yes
 control = ./impute_chr1_downsampled_snps.xml
 
 [Log]
-file = chr11_log_611.txt
+file = chr1_log.txt
 level = debug
 
 [Accuracy]
